--- a/README.html
+++ b/README.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lux</title>
-<link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
-MathJax.Hub.Queue(["Typeset",MathJax.Hub, "displayArea"]);
-
-var text = $("#displayArea").html();
-
-<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
-</head>
-<body><div class="container"><h1 id="lux">Lux</h1>
+<h1 id="lux">Lux</h1>
 
 
 
@@ -105,12 +92,7 @@ var text = $("#displayArea").html();
 4. Integrative methylation analysis (<strong>Lux</strong>) <br>
 5. Calculation of Bayes factors (<strong>bf.py</strong>)</p>
 
-<blockquote>
-  <p><strong>Note:</strong> <br>
-  This documentation focus on the the points three, four, and five.</p>
-</blockquote>
-
-
+<p>This documentation focus on the the points three, four, and five.</p>
 
 <h2 id="installation">Installation</h2>
 
@@ -307,5 +289,4 @@ optional arguments:
 [4] F. Krueger and S. R. Andrews, “Bismark: a flexible aligner and methylation caller for Bisulfite-Seq applications.,” Bioinformatics, vol. 27, no. 11, pp. 1571-1572, Jun 2011.  <br>
 [5] Stan Development Team, “Stan Modeling Language Users Guide and Reference Manual, Version 2.2,” 2014.  <br>
 [6] Stan Development Team, “Stan: A C++ Library for Probability and Sampling, Version 2.2,” 2014.  <br>
-[7] D. Sun, Y. Xi, B. Rodriguez, H. J. Park, P. Tong, M. Meong, M. A. Goodell and W. Li, “MOABS: model based analysis of bisulfite sequencing data.,” Genome Biol, vol. 15, no. 2, pp. R38, Feb 2014. </p></div></body>
-</html>
+[7] D. Sun, Y. Xi, B. Rodriguez, H. J. Park, P. Tong, M. Meong, M. A. Goodell and W. Li, “MOABS: model based analysis of bisulfite sequencing data.,” Genome Biol, vol. 15, no. 2, pp. R38, Feb 2014. </p>
