--- a/README.html
+++ b/README.html
@@ -1,3 +1,10 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title>Lux</title>
+<script type="text/javascript" src="https://stackedit.io/libs/MathJax/MathJax.js?config=TeXAMS_HTML"></script>
+</head>
+<body>
 <h1 id="lux">Lux</h1>
 
 
@@ -290,3 +297,5 @@ optional arguments:
 [5] Stan Development Team, “Stan Modeling Language Users Guide and Reference Manual, Version 2.2,” 2014.  <br>
 [6] Stan Development Team, “Stan: A C++ Library for Probability and Sampling, Version 2.2,” 2014.  <br>
 [7] D. Sun, Y. Xi, B. Rodriguez, H. J. Park, P. Tong, M. Meong, M. A. Goodell and W. Li, “MOABS: model based analysis of bisulfite sequencing data.,” Genome Biol, vol. 15, no. 2, pp. R38, Feb 2014. </p>
+</body>
+</html>
