--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="https://www.dropbox.com/s/atz4kqwayz4hlhk/markDown.css?raw=1">
 
 <script type="text/javascript" src="https://stackedit.io/libs/MathJax/MathJax.js?config=TeXAMS_HTML"></script>
-<script type="text/javascript" src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
+<link href="https://google-code-prettify.googlecode.com/svn/loader/prettify.css" rel="stylesheet">
 
 <title>Lux</title>
 </head>
