--- a/README.html
+++ b/README.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="https://www.dropbox.com/s/atz4kqwayz4hlhk/markDown.css?raw=1">
-
+<link href="http://benweet.github.io/stackedit/css/main-min.css" rel="stylesheet">
 <script type="text/javascript"
-   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
 <title>Lux</title>
