--- a/README.html
+++ b/README.html
@@ -8,6 +8,14 @@
   src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
+MathJax.Hub.Config({
+    tex2jax: {
+        inlineMath: [["$", "$"], ["\\\\(", "\\\\)"]],
+        displayMath: [["$$", "$$"], ["\\[", "\\]"]],
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+    }
+});
+
 <title>Lux</title>
 </head>
 <body><div class="container"><h1 id="lux">Lux</h1>
