--- a/README.html
+++ b/README.html
@@ -3,18 +3,8 @@
 <head>
 <meta charset="utf-8">
 
-<link href="http://benweet.github.io/stackedit/css/main-min.css" rel="stylesheet">
-<script type="text/javascript"
-  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-
-MathJax.Hub.Config({
-    tex2jax: {
-        inlineMath: [["$", "$"], ["\\\\(", "\\\\)"]],
-        displayMath: [["$$", "$$"], ["\\[", "\\]"]],
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-    }
-});
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sunburst"></script>
 
 <title>Lux</title>
 </head>
